k8s/impfpass-vaccination-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impfpass-vaccination-streaming
  labels:
    app: impfpass-vaccination-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: impfpass-vaccination-streaming
  template:
    metadata:
      labels:
        app: impfpass-vaccination-streaming
    spec:
      containers:
        - name: impfpass-vaccination-streaming
          image: schaeufler/impfpass-vaccination-streaming
          # Mount the volume that has been populated by the init container
          volumeMounts:
            - name: hadoop-conf-volume
              mountPath: /hadoop-config
      volumes:
        - name: hadoop-conf-volume
          configMap:
            name: impfpass-vaccination-streaming-hadoop-conf
