k8s/impfpass-db.yaml
#Begin: Service
apiVersion: v1
kind: Service
metadata:
  name: impfpassdb-service
spec:
  selector:
    app: impfpassdb
  ports:
    - port: 3306
  clusterIP: None
#End: Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impfpassdb
spec:
  selector:
    matchLabels:
      app: impfpassdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: impfpassdb
    spec:
      containers:
        - name: impfpassdb
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-volume
              mountPath: /docker-entrypoint-initdb.d/
            - name: impfpassdb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: init-volume
          configMap:
            name: impfpassdb-init-configmap
        - name: impfpassdb-persistent-storage
          persistentVolumeClaim:
            claimName: impfpassdb-pv-claim
