k8s/impfpass-user-db.yaml
#Begin: Service
apiVersion: v1
kind: Service
metadata:
  name: impfpass-user-db-service
spec:
  selector:
    app: impfpass-user-db
  ports:
    - port: 3306
  clusterIP: None
#End: Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impfpass-user-db
spec:
  selector:
    matchLabels:
      app: impfpass-user-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: impfpass-user-db
    spec:
      containers:
        - name: impfpass-user-db
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-volume
              mountPath: /docker-entrypoint-initdb.d/
            - name: impfpass-user-db-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: init-volume
          configMap:
            name: impfpass-user-db-init-configmap
        - name: impfpass-user-db-persistent-storage
          persistentVolumeClaim:
            claimName: impfpass-user-db-pv-claim
