k8s/impfpass-vaccination-db.yaml
#Begin: Service
apiVersion: v1
kind: Service
metadata:
  name: impfpass-vaccination-db-service
spec:
  selector:
    app: impfpass-vaccination-db
  ports:
    - port: 3306
  clusterIP: None
#End: Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impfpass-vaccination-db
spec:
  selector:
    matchLabels:
      app: impfpass-vaccination-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: impfpass-vaccination-db
    spec:
      containers:
        - name: impfpass-vaccination-db
          image: mysql
          # Sometimes the table was not there, because the init-db Script gets only
          # executed when /var/lib/mysql is not present, so we mount also a init.sh-File, which will call after pod
          # start
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "/docker-entrypoint-initdb.d/init.sh &" ]
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-volume
              mountPath: /docker-entrypoint-initdb.d/
            - name: impfpass-vaccination-db-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: init-volume
          configMap:
            name: impfpass-vaccination-db-init-configmap
        - name: impfpass-vaccination-db-persistent-storage
          persistentVolumeClaim:
            claimName: impfpass-vaccination-db-pv-claim
