k8s/impfpass-vaccination-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impfpass-vaccination-microservice-deployment
  labels:
    app: impfpass-vaccination-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: impfpass-vaccination-microservice
  template:
    metadata:
      labels:
        app: impfpass-vaccination-microservice
    spec:
      containers:
        - name: impfpass-vaccination-microservice
          image: schaeufler/impfpass-vaccination-microservice
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              #specify folder
              mountPath: "/conf"
              readOnly: true
      volumes:
        # See: https://kubernetes.io/docs/concepts/configuration/configmap/
        - name: config
          configMap:
            name: impfpass-vaccination-microservice-configmap
            # The Keys from the Config-Map to create a file of
            items:
              - key: "db.env"
                path: "db.env"
---
#Impfpass Vaccination Service
# see for further details: https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: impfpass-vaccination-service
spec:
  selector:
    app: impfpass-vaccination-microservice
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
