k8s/memcached.yaml
#Begin: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcache-deployment
  labels:
    app: memcache-deployment
spec:
  # Three memcached instances
  replicas: 2
  selector:
    matchLabels:
      app: my-memcached
  template:
    metadata:
      labels:
        app: my-memcached
    spec:
      containers:
        - name: my-memcached
          image: memcached:alpine
          imagePullPolicy: Never
          ports:
            - containerPort: 11211
#End: Deployment

---
#Begin: Service
kind: Service
apiVersion: v1
metadata:
  name: my-memcached-service
spec:
  # Headless service (i.e., no ip is assigned)
  clusterIP: None
  selector:
    app: my-memcached
#End: Service
